<resources>
    <string name="app_name">Agenda</string>
    <string name="Nome">Nome</string>
    <string name="Telefone">Telefone</string>
    <string name="Pessoal">Pessoal</string>
    <string name="Trabalho">Trabalho</string>
    <string name="Referência">Referência</string>
    <string name="Salvar">Salvar</string>
    <string name="CampoPesquisa">Pesquisar por nome</string>
    <string name="Pesquisar">Pesquisar</string>
    <string name="ExibirLista">Exibir todos</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Retornar">Retornar</string>


</resources>

